syntax = "proto3";



package protodata;

option go_package = "./protodata";

message Person {
    uint64 ID = 1;
    string Guid = 2;
    string FirstName = 3;
    string LastName = 4;
    string Email = 5;
    uint32 Age = 6; 
    string Type = 7;
    repeated Course Courses = 8;
}

message Course {
    uint64 ID = 1;
    string Guid = 2;
    string Name = 3;
}

message CourseList {
    repeated Course courses = 1;
}

message PersonList {
    repeated Person people = 1;
}

message Filters {
    map<string, string> filters = 1;
}

message Guid {
    string guid = 1;
}

service PersonRepository {
    rpc Save(Person) returns (Person);
    rpc GetByGuid(Guid) returns (Person);
    rpc GetAll(Filters) returns (PersonList);
    rpc Delete(Person) returns (Guid);
}

service CourseRepository {
    rpc Save(Course) returns (Course);
    rpc GetByGuid(Guid) returns (Course);
    rpc GetAll(Filters) returns (CourseList);
    rpc Delete(Course) returns (Guid);
}
